--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.1",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
